syntax = "proto3";

package ares.data_model;

// This is ares simple struct containing keys and values whose type should correspond with and related AresDataSchema
// This is similar to the built-in protobuf struct, but we do not allow nesting for simplicity and easier adherence
// to the schema
message AresStruct {
	map<string, AresValue> fields = 1;
}

message AresValue {
	oneof kind {
		NullValue null_value = 1;
		bool bool_value = 2;
		string string_value = 3;
		double number_value = 4;
		StringArray string_array_value = 5;
		NumberArray number_array_value = 6;
		bytes bytes_value = 7;
		BoolArray bool_array_value = 8;
	}
}

enum NullValue {
	NULL_VALUE = 0;
}

message StringArray {
	repeated string strings = 1;
}

message NumberArray {
	repeated double numbers = 2;
}

message BoolArray {
	repeated bool bools = 3;
}